Fixed margin for all pages
Added a container-margin class to the CSS file to fix the overlapping with the navbar

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     width: 80%;
 }
 
-.carousel-margin{
+.container-margin{
     margin-top: 64px;
 }
 
